--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.1",
     "pg": "^8.9.0",
     "uuid": "^9.0.0",
     "xss-clean": "^0.1.1"
