--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "learnapiexpress",
+  "name": "backend-recipes",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ./"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +22,9 @@
     "pg": "^8.9.0",
     "uuid": "^9.0.0",
     "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.35.0",
+    "eslint-plugin-react": "^7.32.2"
   }
 }
